No longer forcing width by %; Forcing nowrap on ID column only; Adjusted core WP list table style for column with id display_name to have no width minimum.

--- a/css/admin.css
+++ b/css/admin.css
@@ -135,10 +135,10 @@
 
 /* members list */
 .wp-list-table.members .column-ID {
-    width: 5%;
+	white-space: nowrap;
 }
-.wp-list-table.members .column-username {
-    width: 15%;
+.wp-list-table.members #display_name {
+	width: auto;
 }
 
 /* settings */
